--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,8 +22,8 @@ jobs:
           python main.py
       - name: Commit and Push
         run: |
-          git config user.name ${{ env.GIT_NAME }}
-          git config user.email ${{ env.GIT_EMAIL }}
+          git config user.name ${{ secrets.GIT_NAME }}
+          git config user.email ${{ secrets.GIT_EMAIL }}
           git add .
           git commit -m "success to generate map."
           git pull
